--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "host":"https://1685503720538828.cn-hangzhou.fc.aliyuncs.com/2016-08-15/proxy/OneDrive/OneIndex"
+    "host":"https://1507959058313569.cn-shanghai.fc.aliyuncs.com/2016-08-15/proxy/OneDriveSH/ODFun_SH/"
 }
